# py-allotax

./: .gitignore  DECISIONS.md  Dockerfile  LICENSE  README.md  allo_diagram.drawio  examples.ipynb  generate_svg_d3_class.js  package.json  pyproject.toml  raw_requirements.txt  usage.py
convert/: names-boys2022.csv  names-boys2023.csv
data/: boys_2022.js  boys_2023.js  test_data.js
example_data/: boys_1968.csv  boys_1968.json  boys_2018.csv  boys_2022.json  boys_2023.csv  boys_2023.js  boys_2023.json
proof_of_concept/: DoughnutChart.js  generate_svg_d3.js  package.json
scripts/: build.sh
src/: AllotaxChart.js  combine_distributions.js  diamond_count.js  diamond_plot.js  examples.ipynb  generate_svg.py  generate_svg_d3_class.js  generate_svg_from_d3.js  generate_svg_minimum.js  index.html  index2.html  rank_turbulence_divergence.js  util_helpers.js  utils.py
src/components/: balance_plot.js  diamond_plot.js  legend_plot.js  wordshift_plot.js
src/convert/: boys_2018.json  boys_2022.csv  boys_2022.js
src/output_charts/: test.html  test2.html
src/pandoc_attempt/: TEX_TEST1.tex
src/pandoc_weasyprint_attempts/: html_to_pdf.sh  install_troubles.txt  weasyprint_generate.py
src/py_allotax/: generate_svg.py  generate_svg_minimum.js  package-lock.json  package.json  utils.py
src/py_allotax/components/: diamond_plot.js  legend_plot.js
tests/: test_generation.py
