[project]
name = "py-allotax"
version = "1.0.0"
description = "Python implementation of allotaxonometer to produce static graphs."
authors = [
    {name = "Computational StoryLab", email = "jonathanstonge7@gmail.com"},
]
dependencies = ["pandas>=2.2.1", "pyhtml2pdf>=0.0.7", "selenium==4.25.0"]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
